# Laboratorio_UR5_ROS2

./: .gitignore  README.md
Actividad_1_2/entrega_launch/: package.xml  setup.cfg  setup.py
Actividad_1_2/entrega_launch/launch/: main.launch.py  subs_events.launch.py  turtle_mimic.launch.py
Actividad_3/: frames_2026-04-17_11.07.48.gv
Actividad_4/: Activida4_dif_bot_description.urdf.xacro
Actividad_5/: Actividad5_dif_bot_description.urdf.xacro
Actividad_Entregable/my_first_cpp_pkg/: CMakeLists.txt  package.xml
Actividad_Entregable/my_first_cpp_pkg/src/: publisher_member_function.cpp  subscriber_member_function.cpp
Actividad_final/dif_bot_description/: CMakeLists.txt  package.xml
Actividad_final/dif_bot_description/description/: dif_bot_description.urdf.xacro  sensors.xacro
Actividad_final/dif_bot_description/launch/: display.launch.py  gazebo.launch.py
Actividad_final/dif_bot_description/world/: my_world.sdf
Mini–Proyecto/mi_robot/: CMakeLists.txt  package.xml
Mini–Proyecto/mi_robot/launch/: display.launch.py
Mini–Proyecto/mi_robot/rviz/: config.rviz
Mini–Proyecto/mi_robot/urdf/: robot.urdf.xacro
